add newclient
