# pkg/route/docs/swagger.yaml
@@ -22,6 +22,17 @@ definitions:
       updated:
         type: string
     type: object
+  model.ReqClient:
+    properties:
+      agent_id:
+        type: string
+      cluster_id:
+        type: integer
+      ip:
+        type: string
+      port:
+        type: integer
+    type: object
   model.ReqCluster:
     properties:
       name:
@@ -64,7 +75,26 @@ info:
   title: SUDORY
   version: 0.0.1
 paths:
-  /catalogue:
+  /client/regist:
+    post:
+      consumes:
+      - application/json
+      description: Regist a Client
+      parameters:
+      - description: Client의 정보
+        in: body
+        name: client
+        required: true
+        schema:
+          $ref: '#/definitions/model.ReqClient'
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: ""
+      tags:
+      - client
+  /server/catalogue:
     get:
       description: Get a Catalogues
       produces:
@@ -74,7 +104,9 @@ paths:
           description: OK
           schema:
             $ref: '#/definitions/model.Catalogues'
-  /cluster:
+      tags:
+      - server
+  /server/cluster:
     post:
       consumes:
       - application/json
@@ -91,7 +123,9 @@ paths:
       responses:
         "200":
           description: ""
-  /cluster/{id}:
+      tags:
+      - server
+  /server/cluster/{id}:
     get:
       consumes:
       - application/json
@@ -109,7 +143,9 @@ paths:
           description: OK
           schema:
             $ref: '#/definitions/model.Cluster'
-  /cluster/{id}/token:
+      tags:
+      - server
+  /server/cluster/{id}/token:
     post:
       consumes:
       - application/json
@@ -131,7 +167,9 @@ paths:
       responses:
         "200":
           description: ""
-  /service:
+      tags:
+      - server
+  /server/service:
     post:
       consumes:
       - application/json
@@ -148,4 +186,6 @@ paths:
       responses:
         "200":
           description: ""
+      tags:
+      - server
 swagger: "2.0"
